# oddset_club

./: Cargo.toml  README  start_tmux_server.sh
src/: database.rs  main.rs  server.rs
src/database/: club_db.rs  database_structs.rs  debt_db.rs  money_insertion_db.rs  odds_db.rs  players_db.rs  session_db.rs  sql.rs  users_db.rs
src/frontend/: manifest.json
src/frontend/html/: 404.html  add_odds.html  create_club.html  dashboard.html  debt.html  error.html  index.html  insert_money.html  insert_result.html  settings.html  statistics.html  update_odds.html
src/server/: router.rs
src/server/router/: app.rs  dashboard.rs  debt.rs  error.rs  insert_money.rs  login.rs  odds.rs  render.rs  session.rs  settings.rs  statistics.rs
tests/: router_tests.rs
